rm access data for mdb

--- a/configs/config.json
+++ b/configs/config.json
@@ -1,4 +1,4 @@
 {
-  "mongoURL": "mongodb+srv://MyAdminUser:kAt9iTcSwJ9ELfEG@cluster0-psx8t.mongodb.net/test?retryWrites=true&w=majority",
+  "mongoURL": "mongodb",
   "key": "mYsecreTkeY"
 }
